<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.pentaho</groupId>
    <artifactId>pentaho-ce-jar-parent-pom</artifactId>
    <version>9.3.0.0-SNAPSHOT</version>
  </parent>
  <groupId>pentaho</groupId>
  <artifactId>pentaho-mondrian-parent-pom</artifactId>
  <version>9.3.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Pentaho Mondrian Parent POM</name>
  <description>Container pom for mondrian and mondrian workbench</description>
  <url>http://www.pentaho.com</url>
  <licenses>
    <license>
      <name>Eclipse Public License (EPL), Version 1.0</name>
      <url>http://www.eclipse.org/legal/epl-v10.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git@github.com:pentaho/mondrian.git</connection>
    <developerConnection>scm:git:git@github.com:pentaho/mondrian.git</developerConnection>
    <url>scm:git:git@github.com:pentaho/mondrian.git</url>
  </scm>
  <properties>
    <license.licenseName>epl_only_v1</license.licenseName>

<!-- Java 25 Configuration -->
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
    <maven.compiler.parameters>true</maven.compiler.parameters>
   
    <!-- Updated dependency versions for Java 25 -->
    <olap4j.version>1.2.0</olap4j.version>
    <eigenbase-properties.version>1.1.2</eigenbase-properties.version>
    <commons-io.version>2.16.1</commons-io.version>
    <mysql-connector-java.version>8.3.0</mysql-connector-java.version>
    <olap4j-tck.version>1.0.1.539</olap4j-tck.version>
    <eigenbase-resgen.version>1.3.1</eigenbase-resgen.version>
    <junit.version>4.11</junit.version>
    <commons-pool.version>1.2</commons-pool.version>
    <jakarta.validation.version>3.1.1</jakarta.validation.version>
    <commons-collections.version>3.2.2</commons-collections.version>
    <commons-math.version>1.1</commons-math.version>
    <olap4j-xmla.version>1.2.0</olap4j-xmla.version>
    <jsp-api.version>3.1.1</jsp-api.version>
    <mockito-all.version>5.8.0</mockito-all.version>
    <commons-dbcp.version>1.2.1</commons-dbcp.version>
    <olap4j-xmlaserver.version>1.2.0</olap4j-xmlaserver.version>
    <eigenbase-xom.version>1.3.5</eigenbase-xom.version>
    <servlet-api.version>6.0.0</servlet-api.version>
    <commons-lang.version>2.6</commons-lang.version>
    <xmlunit.version>1.6</xmlunit.version>
  </properties>
  <profiles>
    <profile>
      <id>mondrian</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>mondrian</module>
      </modules>
    </profile>
    <!-- <profile>
      <id>workbench</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <modules>
        <module>workbench</module>
      </modules>
    </profile> -->
    <!-- <profile>
      <id>assemblies</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>assemblies</module>
      </modules>
    </profile> -->
    <profile>
      <id>java25-preview</id>
      <activation>
        <jdk>25</jdk>
      </activation>
      <properties>
        <maven.compiler.args>
          --enable-preview
          -Xlint:preview
          -XDsuppressNotes
        </maven.compiler.args>
      </properties>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>pentaho-public</id>
      <name>Pentaho Public</name>
      <url>https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>interval:15</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>pentaho-public-plugins</id>
      <name>Pentaho Public Plugins</name>
      <url>https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <updatePolicy>never</updatePolicy>
      </releases>
    </pluginRepository>
  </pluginRepositories>
  <dependencies>
    <dependency>
      <groupId>it.unimi.dsi</groupId>
      <artifactId>fastutil</artifactId>
      <version>8.3.0</version>
    </dependency>
  </dependencies>
</project>
